app/frontend/style.css
html,
body {
  height: 100%;
  max-width: 100%;
}

#app,
.wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100%;
  width: 100%;
  max-width: 100%;
}

#app {
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}



/* Search form */

.form-control,
.form-control:focus {
  color: white;
  background-color: black;
  border: 1px solid white;
  box-shadow: none;
}

/* Results table */

.table {
  table-layout: fixed;
  width: 100%;
  word-break: break-all;
}

.table tr {
  max-width: 100%;
  vertical-align: middle;
  max-height: 50px;
}

.table td {
  vertical-align: middle;
  word-break: break-all;
}

.table td:hover {
  cursor: pointer;
}

.tablewrapper {
  max-height: 100%;
  width: 100%;
}

/* Download */

.filename {
  color: white;
  font-size: 14px;
  top: 10%;
  position: absolute;
}

/* Loader */
.loadingwrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 300px;
  height: 200px;
}

.loading-heading {
  color: white;
  font-size: 18px;
  margin-bottom: 10px;
  text-transform: capitalize;
}

.loading-subheading {
  color: white;
  font-size: 14px;
  margin-bottom: 20px;
}

.progress {
  margin-top: 20px;
}

.progress-bar {
  background-color: white;
}

.loading-circle-wrapper {
  width: 150px;
  height: 150px;
  margin: 0 auto;
}

.loading-circle {
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  border: 8px solid #fff;
  border-top: 8px solid #ccc;
  border-radius: 50%;
  animation: rotate 5s linear infinite;
}

@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}

/* Player */

.player_wrapper {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.video_wrapper {
  position: relative;
  width: 100%;
  height: 100%;
  max-width: 640px;
  max-height: 360px;
}

.video_wrapper video {
  width: 100%;
  height: 100%;
}
.chromecast-button {
  position: absolute;
  right: 0px;
  z-index: 10;
  opacity: 0.95;
  border-radius: 0px;
}

.video_url,
.video_url:hover,
.video_url:active,
.video_url:focus {
  position: absolute;
  top: 0;
  color: white;
}

